assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
    margin: 0;
    padding: 0;
    font-family: "Poppins", sans-serif;
}

body {
    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(69,155,252,1) 20%, rgba(255,0,0,1) 100%);
    background-size: 200% 200%;
    animation: rotateBackground 10s ease-in-out infinite;
    background-repeat: no-repeat;
}

/* Animação de fundo */
@keyframes rotateBackground {
    0% { background-position: 0% 50%; }
    50% { background-position: 100% 50%; }
    100% { background-position: 0% 50%; }
}

.container{
    width: 90%;
    display: flex;
    align-items: center;
    overflow: hidden;
    flex-direction: column;
    margin: 0 auto;
}

header{
    margin: 20px    ;
    text-align: center;
}

header h1{
    font-weight: 700;
    font-size: 7vmin;
    color: white;
    text-decoration:underline;
}

header h2{
    font-weight: 700;
    font-size: 5vmin;
    color: white;
}

ol{
    width: 100%;
    min-height: 120vmin;
    display: flex;
    justify-content: space-around;
}

ol li{
    font-size: 4vmin;
    display: flex;
    flex-direction: column;
    min-width: 30%;
    text-align: center;
    list-style: none;
    color: white;
    margin: 10px
}

ol li img{
    border: 5px solid wheat;
    max-height: 60vmin;
    border-radius: 10px 10px;
    margin: 1vmin;
}

button{
    max-width: 30%;
    background-color: mediumaquamarine;
    color: black;
    font-size: 3vmin;
    font-weight: bold;
    border: 2px solid black;
    border-radius: 20px;
    padding: 10px 10px; 
    margin-bottom: 3vmin;
}

button:hover{
    cursor: pointer;
}

@media(max-width: 1000px){
    ol{
        flex-direction: column;
    }

    ol li{
        width: 100%;
    }

    ol li img{
        max-height:max-content;
    }
}

